--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,34 +41,21 @@ jobs:
       - restore_cache:
           keys: [frontend-build]
       - run:
-          name: Build front-end
+          name: Install dependencies
           command: |
             cd frontend
+            npm i   
+      - run:
+          name: Build front-end
+          command: |
             npm run build
             exit 1
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
 
-  build-backend:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - checkout
-      - restore_cache:
-          keys: [backend-build]
-      - run:
-          name: Back-end build
-          command: |
-             cd backend 
-             npm run build
-             exit 1
-      - save_cache:
-          paths: [backend/node_modules]
-          key: backend-build
 
 workflows:
   default:
     jobs:
       - build-frontend
-      - build-backend
