--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,8 +54,30 @@ jobs:
           paths: [frontend/node_modules]
           key: frontend-build
 
+  build-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: Install dependencies
+          command: |
+              cd backend
+              npm i    
+      - run:
+          name: Back-end build
+          command: |
+             cd backend
+             npm run build
+             exit 1
+      - save_cache:
+          paths: [backend/node_modules]
+          key: backend-build
 
 workflows:
   default:
     jobs:
       - build-frontend
+      - build-backend
