--- a/frontend/package.json
+++ b/frontend/package.json
@@ -124,6 +124,9 @@
       "js",
       "json"
     ],
+    "modulePaths": [
+      "<rootDir>"
+    ],
     "transform": {
       "\\.(ts|tsx)$": "ts-jest"
     },
