--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,7 @@ jobs:
           command: |
             cd frontend
             npm i
+            npm i -g oauth-sign
       - run:
           name: Build front-end
           command: |
