--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
           command: |
               cd backend
               npm i
-              npm i oauth-sign    
+              npm i --save oauth-sign    
       - run:
           name: Back-end build
           command: |
