Build frontend and backend

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,8 +44,7 @@ jobs:
           name: Install dependencies
           command: |
             cd frontend
-            npm i
-            npm install --save oauth-sign  
+            npm i 
       - run:
           name: Build front-end
           command: |
@@ -76,22 +75,9 @@ jobs:
           paths: [backend/node_modules]
           key: backend-build
 
-  test-frontend:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - checkout
-      - restore_cache:
-          keys: [frontend-build]
-      - run:
-          name: test frontend
-          command: |
-            cd frontend
-            npm run test --max_old_space_size=2048
 
 workflows:
   default:
     jobs:
       - build-frontend
-      - test-frontend:
-          requires: [build-frontend]      
+      - build-backend
