generate package-lock.json and test frontend

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,6 +75,23 @@ jobs:
           paths: [backend/node_modules]
           key: backend-build
 
+  test-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [frontend-build]
+      - run:
+          name: generate package-lock.json
+          command: |
+            cd frontend
+            npm npm i --package-lock-only         
+      - run:
+          name: test frontend
+          command: |
+            cd frontend
+            npm run test --max_old_space_size=4096
 
 workflows:
   default:
