generate package-lock.json and test frontend

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,3 +98,5 @@ workflows:
     jobs:
       - build-frontend
       - build-backend
+      - test-frontend:
+          requires: [build-frontend]      
