--- a/frontend/package.json
+++ b/frontend/package.json
@@ -84,6 +84,7 @@
     "dotenv-webpack": "^1.7.0",
     "jest": "^24.8.0",
     "moment": "^2.24.0",
+    "oauth-sign": "^0.9.0",
     "raf": "^3.4.1",
     "react": "^16.8.6",
     "react-copy-to-clipboard": "^5.0.1",
@@ -103,8 +104,7 @@
     "redux": "^4.0.3",
     "redux-actions": "^2.6.5",
     "redux-thunk": "^2.3.0",
-    "sweetalert2": "^8.13.4",
-    "oauth-sign": "^0.9.0"
+    "sweetalert2": "^8.13.4"
   },
   "jest": {
     "rootDir": "src",
@@ -132,7 +132,9 @@
       "raf/polyfill"
     ],
     "testRegex": ".*(spec|test)\\.(ts|tsx|js)$",
-    "setupFilesAfterEnv": ["<rootDir>/setupTests.ts"],
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTests.ts"
+    ],
     "snapshotSerializers": [
       "enzyme-to-json"
     ],
