--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,10 +88,26 @@ jobs:
             cd frontend
             npm run test --max_old_space_size=4096
 
+  test-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: test backend
+          command: |
+            cd backend
+            npm run test
+
+
 workflows:
   default:
     jobs:
       - build-frontend
       - build-backend
       - test-frontend:
-          requires: [build-frontend]      
+          requires: [build-frontend]
+      - test-backend:
+          requires: [build-backend]                  
