--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -101,6 +101,31 @@ jobs:
             cd backend
             npm run test
 
+  scan-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [frontend-build]
+      - run:
+          name: scan frontend
+          command: |
+          cd frontend
+          npm audit --audit-level=critical    
+
+  scan-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: scan backend
+          command: |
+          cd backend
+          npm audit --audit-level=critical   
 
 workflows:
   default:
@@ -110,4 +135,8 @@ workflows:
       - test-frontend:
           requires: [build-frontend]
       - test-backend:
-          requires: [build-backend]                  
+          requires: [build-backend]
+      - scan-backend:
+          requires: [build-backend] 
+      - scan-frontend:
+          requires: [build-frontend] 
