--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -112,6 +112,11 @@ jobs:
       - restore_cache:
           keys: [frontend-build]
       - run:
+          name: fix scan
+          command: |
+            cd backend
+            npm audit fix --audit-level=critical --force           
+      - run:
           name: scan frontend
           command: |
             cd frontend
@@ -123,7 +128,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          keys: [backend-build]
+          keys: [backend-build]   
       - run:
           name: scan backend
           command: |
