--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,14 +33,15 @@ commands:
 jobs:
   check-versions:
     steps:
-      run:
-        name: check npm and node versions
-        command: |
-          cd frontend
-          npm=`npm --version`
-          echo $npm >> ver.txt
-          node=`node --version`
-          echo $node >> ver.txt 
+      - run:
+          name: check npm and node versions
+          command: |
+            cd frontend
+            npm=`npm --version`
+            echo $npm >> ver.txt
+            node=`node --version`
+            echo $node >> ver.txt 
+
   build-frontend:
     docker:
       - image: circleci/node:13.8.0
