--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,7 @@ jobs:
     docker:
       - image: circleci/node:13.8.0  
     steps:
+      - checkout    
       - run:
           name: check npm and node versions
           command: |
