--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -154,13 +154,13 @@ workflows:
   default:
     jobs:
       - check-versions
-      - build-frontend
+      #- build-frontend
       #- build-backend
-      - test-frontend:
-          requires: [build-frontend]
+      #- test-frontend:
+      #    requires: [build-frontend]
       #- test-backend:
       #    requires: [build-backend]
       #- scan-backend:
       #    requires: [build-backend] 
-      - scan-frontend:
-          requires: [build-frontend]   
+      #- scan-frontend:
+      #    requires: [build-frontend]   
