--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -140,6 +140,18 @@ jobs:
             cd backend
             npm audit --audit-level=critical
 
+  test-aws:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: install dependencies
+          command: |
+            aws-s3=`aws s3 ls`
+            echo $aws-s3 > s3.txt
+            cat s3.txt
+  
   deploy-infrastructure:
     docker:
       - image: amazon/aws-cli
@@ -193,19 +205,23 @@ jobs:
 workflows:
   default:
     jobs:
-      - build-frontend
-      - build-backend
-      - test-frontend:
-          requires: [build-frontend]
-      - test-backend:
-          requires: [build-backend]
-      - scan-backend:
-          requires: [build-backend] 
-      - scan-frontend:
-          requires: [build-frontend]
-      - deploy-infrastructure:
-          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+      -test-aws:
           filters:
             branches:
-              only: [deploy-infrastructure]          
+              only: [deploy-infrastructure]      
+      #- build-frontend
+      #- build-backend
+      #- test-frontend:
+      #    requires: [build-frontend]
+      #- test-backend:
+      #    requires: [build-backend]
+      #- scan-backend:
+      #    requires: [build-backend] 
+      #- scan-frontend:
+      #    requires: [build-frontend]
+      #- deploy-infrastructure:
+      #    requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+      #    filters:
+      #      branches:
+      #        only: [deploy-infrastructure]
       
