--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -140,17 +140,6 @@ jobs:
             cd backend
             npm audit --audit-level=critical
 
-  test-aws:
-    docker:
-      - image: amazon/aws-cli
-    steps:
-      - checkout
-      - run:
-          name: install dependencies
-          command: |
-            awss3=`aws s3 ls`
-            echo $awss3 > s3.txt
-            cat s3.txt
   
   deploy-infrastructure:
     docker:
@@ -188,13 +177,13 @@ jobs:
       - run:
           name: create memstash for back-end dns-name
           command: |
-            backend-url=`aws ec2 describe-instances \
+            backendurl=`aws ec2 describe-instances \
             --query 'Reservations[*].Instances[*].PublicDnsName' \
             --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID}" --output text`
 
             curl -H "Content-Type: text/plain" \
               -H "token: 0f745c33-38cb-4caa-bcfe-4e221d570a3a" \
-              --request PUT --data "$backend-url" https://api.memstash.io/values/backend-dnsname-${CIRCLE_WORKFLOW_ID}   
+              --request PUT --data "$backendurl" https://api.memstash.io/values/backend-dnsname-${CIRCLE_WORKFLOW_ID}   
       - persist_to_workspace:
           root: ~/
           paths:
@@ -204,24 +193,20 @@ jobs:
 
 workflows:
   default:
-    jobs:
-      - test-aws:
+    jobs:   
+      - build-frontend
+      - build-backend
+      - test-frontend:
+          requires: [build-frontend]
+      - test-backend:
+          requires: [build-backend]
+      - scan-backend:
+          requires: [build-backend] 
+      - scan-frontend:
+          requires: [build-frontend]
+      - deploy-infrastructure:
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
             branches:
-              only: [deploy-infrastructure]      
-      #- build-frontend
-      #- build-backend
-      #- test-frontend:
-      #    requires: [build-frontend]
-      #- test-backend:
-      #    requires: [build-backend]
-      #- scan-backend:
-      #    requires: [build-backend] 
-      #- scan-frontend:
-      #    requires: [build-frontend]
-      #- deploy-infrastructure:
-      #    requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      #    filters:
-      #      branches:
-      #        only: [deploy-infrastructure]
+              only: [deploy-infrastructure]
       
