--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -11,10 +11,14 @@
 
   pre_tasks:
     - name: "wait 600 seconds for target connection to become reachable/usable."
-      # Your code here
+      wait_for_connection:
 
     - name: "install python for Ansible."
-      # Your code here
+      become: yes
+      apt:
+        name: "python"
+        state: latest
+        update_cache: yes    
 
   roles:
-    # Your code here
+    configure-server
