--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -190,6 +190,25 @@ jobs:
             - project/.circleci/ansible/inventory.txt
       - destroy-environment 
 
+  configure-infrastructure:
+    docker:
+      - image: python:3.7-alpine3.11
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints: ["16:63:7e:a5:10:d3:0b:34:02:fd:bc:29:4f:7a:01:73"]
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update ansible
+      - run:
+          name: Configure server
+          command: |  
+            cd ~/project/.circleci/ansible
+            ansible-playbook -i inventory.txt playbook.yml
+      - destroy-environment
 
 workflows:
   default:
@@ -209,4 +228,5 @@ workflows:
           filters:
             branches:
               only: [deploy-infrastructure]
-      
+      - configure-infrastructure:
+          requires: [deploy-infrastructure]      
