--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -155,17 +155,18 @@ jobs:
           command: |
             aws cloudformation deploy \
               --template-file .circleci/files/backend.yml \
-              --tags project=udapeople \
               --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID}" \
-              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID}"  
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID}" \               
+              --tags project=udapeople
+ 
       - run:
           name: Ensure front-end infrastructure exist
           command: |
             aws cloudformation deploy \
               --template-file .circleci/files/frontend.yml \
-              --tags project=udapeople\
               --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID}" \
-              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID}"  
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID}" \                            
+              --tags project=udapeople  
       - run:
           name: Add back-end ip to ansible inventory
           command: |
@@ -207,7 +208,7 @@ jobs:
           name: Configure server
           command: |  
             cd ~/project/.circleci/ansible
-            ansible-playbook -i inventory.txt playbook.yml
+            ansible-playbook -i inventory.txt configure-server.yml
       - destroy-environment
 
 workflows:
