--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -157,7 +157,8 @@ jobs:
               --template-file .circleci/files/backend.yml \
               --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID}" \       
               --tags project=udapeople \
-              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID}"              
+              --parameter-overrides \
+              ID="${CIRCLE_WORKFLOW_ID}"              
  
       - run:
           name: Ensure front-end infrastructure exist
@@ -166,7 +167,8 @@ jobs:
               --template-file .circleci/files/frontend.yml \
               --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID}" \
               --tags project=udapeople \
-              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID}"
+              --parameter-overrides \
+              ID="${CIRCLE_WORKFLOW_ID}"
       - run:
           name: Add back-end ip to ansible inventory
           command: |
