--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -154,21 +154,19 @@ jobs:
           name: Ensure back-end infrastructure exists
           command: |
             aws cloudformation deploy \
-              --template-file .circleci/files/backend.yml \
-              --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID}" \       
+              --template-file .circleci/files/backend.yml \      
               --tags project=udapeople \
-              --parameter-overrides \
-              ID="${CIRCLE_WORKFLOW_ID}"              
+              --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID}" \               
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID}"              
  
       - run:
           name: Ensure front-end infrastructure exist
           command: |
             aws cloudformation deploy \
               --template-file .circleci/files/frontend.yml \
-              --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID}" \
               --tags project=udapeople \
-              --parameter-overrides \
-              ID="${CIRCLE_WORKFLOW_ID}"
+              --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID}" \
+              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID}"              
       - run:
           name: Add back-end ip to ansible inventory
           command: |
