--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -157,7 +157,7 @@ jobs:
               --template-file .circleci/files/backend.yml \      
               --tags project=udapeople \
               --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID}" \               
-              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID}"              
+              --parameter-overrides ID=${CIRCLE_WORKFLOW_ID}"                       
  
       - run:
           name: Ensure front-end infrastructure exist
@@ -166,7 +166,7 @@ jobs:
               --template-file .circleci/files/frontend.yml \
               --tags project=udapeople \
               --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID}" \
-              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID}"              
+              --parameter-overrides ID=${CIRCLE_WORKFLOW_ID}              
       - run:
           name: Add back-end ip to ansible inventory
           command: |
