--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -203,12 +203,13 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --update ansible
+            apk add --update ansible aws-cli
       - run:
           name: Configure server
           command: |  
             cd ~/project/.circleci/ansible
-            ansible-playbook -i inventory.txt configure-server.yml
+            cat inventory.txt
+            ansible-playbook configure-server.yml -i inventory.txt
       - destroy-environment
 
 workflows:
