--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -207,9 +207,7 @@ jobs:
       - run:
           name: Configure server
           command: |  
-            cd ~/project/.circleci/ansible
-            cat inventory.txt
-            ansible-playbook configure-server.yml -i inventory.txt
+            ansible-playbook .circleci/ansible/configure-server.yml -i ~/project/.circleci/ansible/inventory.txt
       - destroy-environment
 
 workflows:
