--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -203,7 +203,8 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            yum -y install ansible tar
+            yum -y install ansible 
+            yum -y install tar unzip
       - run:
           name: Configure server
           command: |  
