--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -188,7 +188,7 @@ jobs:
       - persist_to_workspace:
           root: ~/
           paths:
-            - project/*
+            - project/.circleci/ansible/inventory.txt
       - destroy-environment 
 
   configure-infrastructure:
@@ -207,8 +207,8 @@ jobs:
       - run:
           name: Configure server
           command: |
-            cat ~/project/inventory.txt  
-            ansible-playbook .circleci/ansible/configure-server.yml -i ~/project/inventory.txt
+            cd ~/project/.circleci/ansible  
+            ansible-playbook .circleci/ansible/configure-server.yml -i inventory.txt
       - destroy-environment
 
 workflows:
