--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -174,7 +174,8 @@ jobs:
             aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID}" --output text >> inventory.txt
-            cat inventory.txt  
+            cp .circleci/ansible/inventory.txt ~/inventory.txt            
+            cat ~/inventory.txt  
       - run:
           name: create memstash for back-end dns-name
           command: |
@@ -188,7 +189,7 @@ jobs:
       - persist_to_workspace:
           root: ~/
           paths:
-            - project/.circleci/ansible/inventory.txt
+            - inventory.txt
       - destroy-environment 
 
   configure-infrastructure:
@@ -206,9 +207,8 @@ jobs:
           at: ~/            
       - run:
           name: Configure server
-          command: |
-            cd ~/project/.circleci/ansible  
-            ansible-playbook .circleci/ansible/configure-server.yml -i inventory.txt
+          command: | 
+            ansible-playbook .circleci/ansible/configure-server.yml -i ~/inventory.txt
       - destroy-environment
 
 workflows:
