--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -173,12 +173,12 @@ jobs:
             cd .circleci/ansible
             aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID}" --output text >> inventory.txt
-            cp .circleci/ansible/inventory.txt ~/inventory.txt            
-            cat ~/inventory.txt  
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID}" --output text >> inventory.txt          
+            cat inventory.txt  
       - run:
           name: create memstash for back-end dns-name
           command: |
+            ls
             backendurl=`aws ec2 describe-instances \
             --query 'Reservations[*].Instances[*].PublicDnsName' \
             --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID}" --output text`
