--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -178,7 +178,7 @@ jobs:
       - run:
           name: create memstash for back-end dns-name
           command: |
-            ls
+
             backendurl=`aws ec2 describe-instances \
             --query 'Reservations[*].Instances[*].PublicDnsName' \
             --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID}" --output text`
@@ -189,7 +189,7 @@ jobs:
       - persist_to_workspace:
           root: ~/
           paths:
-            - inventory.txt
+            - .circleci/file/ansible/inventory.txt
       - destroy-environment 
 
   configure-infrastructure:
@@ -208,7 +208,7 @@ jobs:
       - run:
           name: Configure server
           command: | 
-            ansible-playbook .circleci/ansible/configure-server.yml -i ~/inventory.txt
+            ansible-playbook .circleci/ansible/configure-server.yml -i ~/.circleci/file/ansible/inventory.txt
       - destroy-environment
 
 workflows:
