--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -209,6 +209,8 @@ jobs:
           at: ~/            
       - run:
           name: Configure server
+          environment:
+            ANSIBLE_HOST_KEY_CHECKING: False
           command: |
             cd .circleci/ansible 
             ansible-playbook configure-server.yml -i ~/inventory.txt
