--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -211,6 +211,7 @@ jobs:
           name: Configure server
           environment:
             ANSIBLE_HOST_KEY_CHECKING: False
+            TYPEORM_CONNECTION: ${TYPEORM_CONNECTION}
           command: |
             cd .circleci/ansible 
             ansible-playbook configure-server.yml -i ~/inventory.txt
