--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -7,7 +7,7 @@
 - name: "upgarde apt package."
   become: yes
   apt:
-    upgarde: "yes"
+    upgrade: "yes"
 
 - name: " install nodejs."
   become: yes
