--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -216,6 +216,46 @@ jobs:
             ansible-playbook configure-server.yml -i ~/inventory.txt
       - destroy-environment
 
+  run-migrations:
+    docker:
+      - image: sleavely/node-awscli:14.x
+    steps:
+      - checkout
+      - run:
+          name: DB Setup
+          command: |
+            cd backend
+            touch .env
+            echo "ENVIRONMENT=production" >> .env
+            echo "TYPEORM_CONNECTION=${TYPEORM_CONNECTION}" >> .env
+            echo "TYPEORM_ENTITIES=${TYPEORM_ENTITIES}" >> .env
+            echo "TYPEORM_HOST=${TYPEORM_HOST}" >> .env
+            echo "TYPEORM_PORT=${TYPEORM_PORT}" >> .env
+            echo "TYPEORM_USERNAME=${TYPEORM_USERNAME}" >> .env
+            echo "TYPEORM_PASSWORD=${TYPEORM_PASSWORD}" >> .env
+            echo "TYPEORM_DATABASE=${TYPEORM_DATABASE}" >> .env
+            cat .env
+      - run:
+          name: Run migrations
+          command: |
+            cd backend
+            npm run migrations > migration_output.txt
+      - run:
+          name: Send migration results to memstash
+          command: |
+            cd backend
+            cstring=`grep "has been executed successfully" migration_output.txt`
+            if [ ! -z "$cstring" ]
+            the
+            echo "Successful"
+            curl -H "Content-Type: text/plain" \
+            -H "token: 84c5d1b7-bf5a-4e4b-86ab-62b35d9d7ec5" \
+            --request PUT --data "1" https://api.memstash.io/values/migration_${CIRCLE_WORKFLOW_ID}
+            else
+            echo "Failed"
+            fi
+      - destroy-environment
+
 
 workflows:
   default:
@@ -236,4 +276,9 @@ workflows:
             branches:
               only: [deploy-infrastructure]
       - configure-infrastructure:
-          requires: [deploy-infrastructure]      
+          requires: [deploy-infrastructure]
+      - run-migrations:
+          requires: [configure-infrastructure]          
+          filters:
+            branches:
+              only: [deploy-phase]
