--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -274,7 +274,7 @@ workflows:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
             branches:
-              only: [deploy-infrastructure]
+              only: [deploy-infrastructure, deploy-phase]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
       - run-migrations:
