--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -226,7 +226,7 @@ jobs:
       - run:
           name: install less
           command: |
-            apt-get install -yy less
+            sudo apt-get install -yy less
       - run:
           name: DB Setup
           command: |
