--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -247,6 +247,7 @@ jobs:
           name: Run migrations
           command: |
             cd backend
+            npm i
             npm run migrations > migration_output.txt
       - run:
           name: Send migration results to memstash
