--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -249,13 +249,14 @@ jobs:
             cd backend
             npm i
             npm run migrations > migration_output.txt
+            cat migration_output.txt
       - run:
           name: Send migration results to memstash
           command: |
             cd backend
             cstring=`grep "has been executed successfully" migration_output.txt`
             if [ ! -z "$cstring" ]
-            the
+            then
             echo "Successful"
             curl -H "Content-Type: text/plain" \
             -H "token: 84c5d1b7-bf5a-4e4b-86ab-62b35d9d7ec5" \
