--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -221,8 +221,6 @@ jobs:
       - image: sleavely/node-awscli:14.x
     steps:
       - checkout
-      #- restore_cache:
-      #    keys: [backend-build]
       - run:
           name: install less
           command: |
@@ -248,15 +246,14 @@ jobs:
           command: |
             cd backend
             npm i
-            npm run build
             npm run migrations > migration_output.txt
             cat migration_output.txt
       - run:
           name: Send migration results to memstash
           command: |
             cd backend
-            cstring=`grep "has been executed successfully" migration_output.txt`
-            if [ ! -z "$cstring" ]
+            cstring=`grep -c "has been executed successfully" migration_output.txt || true`
+            if [ "$cstring" -gt 0 ]
             then
             echo "Successful"
             curl -H "Content-Type: text/plain" \
