--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -291,9 +291,11 @@ jobs:
             npm i
             npm run build
             ls dist      
-      #- run:
-      #    name: Deploy frontend objects
-      #    command: |
+      - run:
+          name: Deploy frontend objects
+          command: |
+            cd frontend
+            aws s3 cp ./dist s3://udapeople-${CIRCLE_WORKFLOW_ID}/ --recursive
             
       - destroy-environment
 
