--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -299,6 +299,38 @@ jobs:
             
       - destroy-environment
 
+  deploy-backend:
+    docker:
+      - image: sleavely/node-awscli:14.x
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints: ["16:63:7e:a5:10:d3:0b:34:02:fd:bc:29:4f:7a:01:73"]
+      - attach_workspace:
+          at: ~/        
+      - run:
+          name: Install dependencies
+          command: |
+            apt-get update
+            apt-get install -yy less python3 
+            curl https://bootstrap.pypa.io/pip/3.5/get-pip.py -o get-pip.py
+            python3 get-pip.py --user
+            python3 -m pip install --user ansible
+      - run:
+          name: prepare for deploy
+            cp .env backend/
+            cd backend
+            cat .env
+            npm i
+            npm run build
+            ls dist
+      - run:
+          name: Deploy backend
+          command: |
+            # your code here
+
+      - destroy-environment
+
 workflows:
   default:
     jobs:   
