prepare for deploy backend

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -324,7 +324,7 @@ jobs:
             cat .env
             npm i
             npm run build
-            cp -R dist/.* .circleci/ansible/deploy/files/
+            cp -R dist/.* ../.circleci/ansible/deploy/files/
             ls .circleci/ansible/deploy/files/
       - run:
           name: Deploy backend
