prepare for deploy backend

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -324,9 +324,10 @@ jobs:
             cat .env
             npm i
             npm run build
-            mkdir ../.circleci/ansible/deploy/files
-            cp -R dist/.* ../.circleci/ansible/deploy/files/
-            ls ../.circleci/ansible/deploy/files/
+            cd ../.circleci/ansible/deploy
+            mkdir files
+            cp -R ../backend/dist/.* files/
+            ls files/
       - run:
           name: Deploy backend
           command: |
