prepare for deploy backend

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -365,4 +365,4 @@ workflows:
       #- deploy-frontend:
       #    requires: [run-migrations]              
       - deploy-backend:
-          requires: [run-migrations]      
+      #    requires: [run-migrations]      
