prepare for deploy backend

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -364,5 +364,5 @@ workflows:
       #        only: [deploy-phase]
       #- deploy-frontend:
       #    requires: [run-migrations]              
-      - deploy-backend:
+      - deploy-backend
       #    requires: [run-migrations]      
