--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -325,9 +325,7 @@ jobs:
             cat .env
             npm i
             npm run build
-            cp -R dist/*  ~/project/.circleci/ansible/roles/deploy/files/
-            #cp -R dist/* ../.circleci/ansible/roles/deploy/files/
-            #ls ../.circleci/ansible/roles/deploy/files/
+            scp -R dist/*  ubuntu@54.189.139.18:~/web/
       - run:
           name: Deploy backend
           environment:
