--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,13 +1,13 @@
 ---
-- name: Creates directory
-  file:
-    path: ~/web
-    state: directory
+#- name: Creates directory
+#  file:
+#    path: ~/web
+#    state: directory
 
 - name: Copy Files
   copy:
-    src: "files/"
-    dest: "~/web/"
+    src: "files/archive.tar.gz"
+    dest: "~/archive.tar.gz"
 
 #- name: Executing node
 #  shell: |
