fix connection refused and run backend smoke test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -353,7 +353,7 @@ jobs:
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID}" --output text`
 
-            curl https://${BACKEND_IP}:3030/api/status  
+            curl -s http://${BACKEND_IP}:3030/api/status  
       - run:
           name: Frontend smoke test.
           command: |
